# graph-theory-five-color-theorem

./: CMakeLists.txt  Makefile  Stack.c  Stack.h  graph.c  graph.h  graph_coloring  main.c  testStack.c  tools.c  tools.h
rapport/: rapport.aux  rapport.tex
